app/styles/app.less
.header-tab {
    font-size: 10px;
    opacity: 100%;
    background-color: #3F51B5 !important;
    padding-top: 3px;
}

.viewDocs {
    height: 550px;
    text-align: left;
}

.menu {
    background-color: white;
    border: none;
    height: 25px;
    margin: 16px;
    width: 25px;
}

img {
    opacity: 80%;
    visibility: hidden;
}

.jumbobox {
    text-align: center;
    min-width: 200px;
    height: 500px;
    animation: jux 5s infinite;
    background: url("../images/banner1.jpg");
    background-repeat: repeat-x;
    @media (max-width: 599px) {
        width: 100%;
        height: auto;
    }
    @media (min-width: 1440px) {
        width: 60%;
    }
    ;
}

.banner {
    text-align: center;
    width: 100%;
    height: 500px;
    background-color: rgba(0, 0, 0, 0.4);
    color: #D3D3D3;
    @media (max-width: 599px) {
        width: 100%;
        height: auto;
    }
    @media (min-width: 1440px) {
        width: 60%;
    }
    ;
}

.box {
    text-align: center;
    width: 100%;
    margin-top: 50px;
    font-size: 40px;
    padding-top: 10px;
    min-width: 300px !important;
    line-height: 1.5em;
    height: 150px !important;
    max-height: 45% !important;
    color: white;
    animation: jux 5s infinite;
    z-index: 50px;
}

.md-button.md-primary.md-raised {
    background-color: #2d355f;
    height: 50px;
    width: 150px;
    font-size: 0.9em;
}

a.md-button.md-primary.md-raised {
    background-color: #2d355f;
    height: 50px;
    padding-top: 5px;
    width: 200px;
    font-size: 0.9em;
    box-shadow: 2px 2px 2px grey;
}

.md-button.md-primary.md-raised:hover {
    background-color: #2d355f !important;
    box-shadow: 2px 2px 2px #2d355f;
}

.md-button.md-primary.md-raised:active {
    background-color: #3e8e41;
    box-shadow: 0 5px #666;
    transform: translateY(4px);
}

.home-page {
    width: 100%;
    min-height: 660px;
    padding-top: 3px;
    position: relative;
    margin: auto;
    opacity: 80%;
    color: black;
    overflow: hidden;
    min-width: 500px;
}

a {
    font-size: 18px;
    text-decoration: none;
    cursor: pointer;
}

a:hover {
    color: rgb(63, 81, 81);
    text-decoration: none;
}

body {
    width: 100%;
    height: 100%;
}

@keyframes animatedBackground {
    from {
        background-position: 0 0;
    }
    to {
        background-position: 100% 0;
    }
}

h1,
h2,
h3,
h4,
h5 {
    margin: 0 0 5px 0;
    &.md-padding {
        margin: 0;
    }
}

@keyframes jux {
    from {
        color: black;
    }
    to {
        color: black;
    }
}

h1.md-button.md-raised.md-primary {
    margin-top: 10px;
    margin-bottom: 16px;
    font-size: 30px;
    width: auto;
    height: 30px;
    border-radius: 10px;
}

.logo-text {
    font-family: Playball;
    font-size: 30px;
}

.logo-text:hover {
    box-shadow: 5px white;
}

h2 > a,
div > h4 {
    font-size: 20px;
    text-align: center;
}

div > span {
    font-size: 1.5em;
    padding: 0px;
    color: beige;
}

div > h4,
div > md-button {
    margin: 0 auto;
    padding-bottom: 10px;
}

.footer {
    width: 100%;
    text-align: center;
    font-size: 0.8em;
    background-color: rgb(250, 250, 250);
    color: black;
    width: 100%;
    height: 60px;
    position: relative;
}

input {
    border: 0;
}

.messages {
    >div {
        margin-top: 5px;
    }
    font-size:12px;
}

.sign-up-wrap {
    margin: 0 auto;
    width: 350px;
    background-color: #fff;
    color: black;
    padding-top: 15px;
    position: relative;
    h5 {
        a {
            font-size: 12px;
        }
        color: black;
    }
    form {
        width: 90%;
    }
    md-input-container {
        margin: 10px 0;
        .md-input {}
    }
    .fa {
        color: #2d355f !important;
        margin-right: 5px;
    }
}

.signup-button {
    text-align: center;
    margin: 0 auto;
}

.error {
    color: red;
    font-size: 9px;
    display: inline-flex;
}

.sign-in-wrap {
    background-color: white;
    opacity: 0.5%;
    min-width: 300px;
    color: black;
    padding-top: 10px;
    margin: 0 auto;
    padding-bottom: 15px;
    width: 320px;
    font-size: 1.2em;
    position: relative;
    h5 {
        a {
            font-size: 12px;
        }
        color: black;
    }
    md-input-container {
        margin: 10px 0;
        .md-input {}
    }
    .sign-in-footer {
        padding-bottom: 14px;
        padding-top: -3px;
        margin: -15px;
        text-align: center;
    }
    .fa {
        color: #2d355f !important;
    }
}

.signin-icons {
    float: left;
    color: #2d355f !important;
    padding-right: 10px;
}

.sign-up-link {
    color: #3f51b5 !important;
}

.layout-align-center-center>*,
.layout-align-end-center>*,
.layout-align-space-around-center>*,
.layout-align-space-between-center>*,
.layout-align-start-center>* {
    max-width: 100%;
    box-sizing: border-box;
}

md-dialog {
    margin-top: 20px;
    border-radius: 0;
    background-color: #D7D9E0;
}

.sign-up-header {
    color: #3f51b5;
    font-size: 20px;
    text-align: center;
}

p.link {
    color: red;
    font-size: 1.0em;
}

div > md-button {
    text-align: center;
}

.header-display {
    text-align: center;
    color: grey;
    font-weight: bold;
}

.dashboard-wrapper {
    width: 100%;
    height: 670px;
    padding-top: 3px;
    position: relative;
    margin: 0 auto;
    background-color: white;
    color: white;
    text-decoration-color: white;
    >mdSidenav > div > md-card {
        height: 80px;
        min-height: 80px;
    }
}

.dashboard-header {
    width: 99%;
    height: 50px;
    margin: 0 auto;
    overflow: hidden;
    border: red solid 2px;
    position: absolute;
    background-color: whitesmoke;
}

.side-bar {
    width: 200px;
    height: 640px;
    margin-top: 25px;
    position: absolute;
    float: left;
    border: dashed 3px green;
    color: red;
}
/* ... */

